movie details page completed

--- a/app/src/main/res/layout/slider_item_layout.xml
+++ b/app/src/main/res/layout/slider_item_layout.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/imageSlide"
-    app:riv_corner_radius="@dimen/dp_12"
-    android:adjustViewBounds="true">
+    android:adjustViewBounds="true"
+    app:cardCornerRadius="@dimen/dp_12">
 
-</com.makeramen.roundedimageview.RoundedImageView>
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/imageSlide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:riv_corner_radius="@dimen/dp_12" />
+
+</androidx.cardview.widget.CardView>
